# icaroverse

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
config_files/: config_MBHB.ini  config_Powerlaw-Gaussian.ini  config_inference_LISA_MBHB.ini  config_inference_LVK_BBH_H0.ini
data/psd/: H1_O4.txt  README_PSD.md  V1_O3.txt
example_config_files/: config_example_PE.ini  config_inference_LISA_MBHB.ini  config_inference_LVK_BBH.ini  config_inference_LVK_BBH_H0.ini  config_injections_LISA_MBHB.ini  config_population_LVK_BBH.ini
icarogw_pipeline/: IGWN_events.py  IGWN_pointers.py  LISA_slurm_pipeline.py  condor_pipeline.py  generate_injections.py  generate_population.py  icarogw_pipeline.py  icarogw_postprocessing.py  icarogw_runner.py  options.py  pipeline.py  slurm_pipeline.py  snr_computation.py
icarogw_pipeline/parameter_estimation/: bilby_pipeline.py  combine_results.py  generate_configs.py  initialise.py  slurm_pipeline.py
icarogw_pipeline/simulations/: icarogw_simulation.py  initialise.py  snr_computation.py
icarogw_pipeline/simulations/config_files/: config_Powerlaw-Gaussian.ini  config_injections_Powerlaw-Gaussian.ini  config_injections_Powerlaw.ini  config_population_MBHB.ini  config_population_Powerlaw-Gaussian.ini  config_population_Powerlaw-GaussianRedshiftLinear.ini
icaroverse/: LISA_slurm_pipeline.py  condor_pipeline.py  icaroverse_runner.py  options.py  slurm_pipeline.py
icaroverse/parameter_estimation/: bilby_pipeline.py  generate_configs.py  initialise.py
icaroverse/simulations/: icaroverse_simulation.py  initialise.py
icaroverse/simulations/config_files/: config_injections_LISA_MBHB.ini  config_population_Powerlaw-Gaussian.ini
src/icaroverse/data/psd/: H1_O3.txt  K1_O4.txt  K1_O5.txt  L1_O3.txt  L1_O5.txt  V1_O4.txt  V1_O5.txt  avirgo_O3actual.txt  avirgo_O4high_NEW.txt  kagra_10Mpc.txt  kagra_3Mpc.txt
src/icaroverse/generate_events/: generate_events.py  initialise.py  snr_computation.py
src/icaroverse/hierarchical_inference/: IGWN_pointers.py  hierarchical_inference.py  initialise.py
src/icaroverse/parameter_estimation/: bilby_pipeline.py  combine_pe_posteriors.py  generate_configs.py  generate_pe_configs.py  initialise.py  parameter_estimation.py
src/icaroverse/simulations/: icaroverse_simulation.py  initialise.py
src/icaroverse/simulations/config_files/: config_injections_LVK_BBH.ini  config_population_LVK_BBH.ini
src/icaroverse/utils/: condor_pipeline.py  create_job.py  slurm_parameter_estimation.py  slurm_pipeline.py
