[build-system]
requires = [
    "setuptools >= 80",
    "setuptools-scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "icaroverse"
dynamic = ["version"]

description = "A flexible and extensible framework for automating gravitational-wave population and cosmological inference with icarogw"

readme = "README.md"

requires-python = ">= 3.12"

dependencies = [
  # Numpy and friends
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  # Our workhorses
  "icarogw @ git+https://github.com/simone-mastrogiovanni/icarogw.git",
  "nessai-bilby",
  # Other (we should probably clean this)
  "tqdm",
  "scikit-learn",
  "seaborn",
]

[project.scripts]
icaroverse_simulation = "icaroverse.simulations.icaroverse_simulation:main"
bilby_pipeline = "icaroverse.parameter_estimation.bilby_pipeline:main"
combine_results = "icaroverse.parameter_estimation.combine_results:main"
generate_configs = "icaroverse.parameter_estimation.generate_configs:main"
icaroverse_runner = "icaroverse.pipeline.icaroverse_runner:main"

[tool.setuptools_scm]
version_file = "src/icaroverse/_version.py"
parentdir_prefix_version = "icaroverse-"
